coffee-app/002-coffee-routing.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: coffee-route
spec:
  parentRefs:
  - name: cafe-gateway
  hostnames:
  - "cafe.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: coffee-service-v1
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /
      headers:
      - name: version
        value: v2
    backendRefs:
    - name: coffee-service-v2
      port: 80
